# mao

./: .nvim_run  Cargo.toml  README.md
mao/: Cargo.toml
mao-core/: Cargo.toml
mao-core/src/: interp.rs  lib.rs  parser.rs  tokenizer.rs
mao-core/src/parser/: ast.rs
mao-core/src/tokenizer/: keyword.rs
mao/src/: main.rs
maolang/: Cargo.toml
maolang-core/: Cargo.toml
maolang-core/src/: interp.rs  parser.rs  tokenizer.rs
maolang-core/src/interp/: sf.rs
maolang-core/src/parser/: ast.rs
maolang-core/src/tokenizer/: keyword.rs
maolang/src/: main.rs
samples/: README.md  adderr.mao  conditional.mao  conditional_eval.mao  hello.mao  ifelse.mao  variables.mao  while.mao
