[package]
name = "mao"
version = "0.1.0"
edition = "2024"
description = "A language with dynamic and annoying rules"
license = "MIT OR Apache-2.0"
authors.workspace = true
repository = "https://github.com/BradenEverson/kronk"
readme = "../README.md"

[dependencies]
mao-core = {path = "../mao-core", version = "0.1.0"}
rand = "0.9.0"
rand_chacha = "0.9.0"
sha2 = "0.10.8"

[lints]
workspace = true
