[package]
name = "maolang"
version = "0.1.1"
edition = "2024"
description = "A language with dynamic and annoying rules"
license = "MIT OR Apache-2.0"
authors.workspace = true
repository = "https://github.com/BradenEverson/mao"
readme = "../README.md"

[[bin]]
name = "mao"

[dependencies]
maolang-core = {path = "../maolang-core", version = "0.1.0"}
rand = "0.9.0"
rand_chacha = "0.9.0"
sha2 = "0.10.8"

[lints]
workspace = true
